tests/verifier/fail/test23.ial
function void foo() cdecl
{
    block entry
    {
        invoke.tail (foo);
        leave;
    }
}
